--- a/Notebooks/Pandas_Statistics.ipynb
+++ b/Notebooks/Pandas_Statistics.ipynb
@@ -1986,13 +1986,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 298
         },
-        "outputId": "c288a603-8523-4844-9bf5-884970c7bc03"
+        "outputId": "100b39f2-bdbe-4323-9f1c-1bc0dc28f52e"
       },
       "source": [
         "# Para preencher os valores de cruzamentos que não existem, usa-se o parâmetro \"fill_value\"\n",
-        "df.pivot_table(index='Position Title', values='Monthly Salary', columns='Department', aggfunc='max', fill_value=0,).head(2)"
+        "df.pivot_table(index='Position Title', values='Monthly Salary', columns='Department', aggfunc='max', fill_value=0).head(2)"
       ],
-      "execution_count": 216,
+      "execution_count": 221,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2184,9 +2184,22 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 216
+          "execution_count": 221
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z-2u5a1Dbzif",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
