--- a/Notebooks/Pandas_Basics.ipynb
+++ b/Notebooks/Pandas_Basics.ipynb
@@ -42,20 +42,19 @@
       "metadata": {
         "id": "5-Bv-X1A4l9E",
         "colab_type": "code",
-        "outputId": "b8d2f8ca-6c10-4ab7-d33e-9b293938fa1d",
+        "outputId": "c4dd7822-360a-4acb-8ee3-2ff225f1720a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
+          "height": 142
         }
       },
       "source": [
-        "data = {'Name':['Tom', 'nick', 'krish', 'jack'],\n",
-        "        'Age':[20, 21, 19, 18]}\n",
-        "\n",
+        "# Por coluna (dicionário de listas)\n",
+        "data = {'Name':['Tom','nick','krish'], 'Age':[20, 21, 19], 'Gender':['M','M','F']}\n",
         "df = pd.DataFrame(data)\n",
         "df"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -81,6 +80,7 @@
               "      <th></th>\n",
               "      <th>Name</th>\n",
               "      <th>Age</th>\n",
+              "      <th>Gender</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -88,38 +88,118 @@
               "      <th>0</th>\n",
               "      <td>Tom</td>\n",
               "      <td>20</td>\n",
+              "      <td>M</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>nick</td>\n",
               "      <td>21</td>\n",
+              "      <td>M</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>krish</td>\n",
               "      <td>19</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>jack</td>\n",
-              "      <td>18</td>\n",
+              "      <td>F</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    Name  Age\n",
-              "0    Tom   20\n",
-              "1   nick   21\n",
-              "2  krish   19\n",
-              "3   jack   18"
+              "    Name  Age Gender\n",
+              "0    Tom   20      M\n",
+              "1   nick   21      M\n",
+              "2  krish   19      F"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 107
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RyXvCyqRjRfb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        },
+        "outputId": "aad0e3e6-8bfb-4b8d-df64-44e42b9e2b17"
+      },
+      "source": [
+        "# Por linha (lista de dicionários)\n",
+        "data = [{'Name':'Tom','Age':20,'Gender':'M'}, {'Name':'nick','Age':21,'Gender':'M'}, {'Name':'krish','Age':19,'Gender':'F'}]\n",
+        "df = pd.DataFrame(data)\n",
+        "df"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Gender</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Tom</td>\n",
+              "      <td>20</td>\n",
+              "      <td>M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>nick</td>\n",
+              "      <td>21</td>\n",
+              "      <td>M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>krish</td>\n",
+              "      <td>19</td>\n",
+              "      <td>F</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Name  Age Gender\n",
+              "0    Tom   20      M\n",
+              "1   nick   21      M\n",
+              "2  krish   19      F"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
         }
       ]
     },
@@ -188,7 +268,7 @@
       "metadata": {
         "id": "6EZ4gaMNvruy",
         "colab_type": "code",
-        "outputId": "3ffa4002-12fe-4752-fb2f-569db859e7e7",
+        "outputId": "8f50c25f-74d7-4734-d236-c5a8cbcaf75a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -199,7 +279,7 @@
         "print('Linhas:', df.shape[0])\n",
         "print('Colunas:', df.shape[1])"
       ],
-      "execution_count": 136,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1452,7 +1532,7 @@
         "filtro = df['Department']=='POLICE'\n",
         "filtro"
       ],
-      "execution_count": 137,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1494,7 +1574,7 @@
         "# Aplicando esse DataFrame ao original, temos o resultado filtrado\n",
         "df[filtro]"
       ],
-      "execution_count": 138,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2107,17 +2187,17 @@
       "metadata": {
         "id": "TFjHS_XD9-zS",
         "colab_type": "code",
+        "outputId": "6d19cac6-05a6-4aad-ed51-6b89e517b82b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        },
-        "outputId": "6d19cac6-05a6-4aad-ed51-6b89e517b82b"
+        }
       },
       "source": [
         "# Slice só por linhas\n",
         "df.loc[20:23]"
       ],
-      "execution_count": 149,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2202,17 +2282,17 @@
       "metadata": {
         "id": "d2upQxlc-hdc",
         "colab_type": "code",
+        "outputId": "66f61d0e-1b2b-4cb1-a66d-1e5002bd8acb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "outputId": "66f61d0e-1b2b-4cb1-a66d-1e5002bd8acb"
+        }
       },
       "source": [
         "# Slice só por colunas\n",
         "df.loc[ : , 'Name':'Department']"
       ],
-      "execution_count": 155,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2342,17 +2422,17 @@
       "metadata": {
         "id": "mJHsZl1h_qp5",
         "colab_type": "code",
+        "outputId": "33cd6a76-b405-4d6a-f976-19bb2fa76dee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        },
-        "outputId": "33cd6a76-b405-4d6a-f976-19bb2fa76dee"
+        }
       },
       "source": [
         "# Slice só por linhas e colunas\n",
         "df.loc[20:23 , 'Name':'Department']"
       ],
-      "execution_count": 181,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2444,17 +2524,17 @@
       "metadata": {
         "id": "GxlLPIAEAnOT",
         "colab_type": "code",
+        "outputId": "23fd74ad-3f65-4961-a147-a3587f305c3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "23fd74ad-3f65-4961-a147-a3587f305c3a"
+        }
       },
       "source": [
         "df_loc = df.set_index('Department').sort_index()\n",
         "df_loc.head()"
       ],
-      "execution_count": 182,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2548,16 +2628,16 @@
       "metadata": {
         "id": "htFRJVxBFEfP",
         "colab_type": "code",
+        "outputId": "42fac187-3601-4cf8-e2ca-597e46bccfb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 450
-        },
-        "outputId": "42fac187-3601-4cf8-e2ca-597e46bccfb4"
+        }
       },
       "source": [
         "df_loc.loc['GENERAL SERVICES':'POLICE' , 'Name':'Position Title' ]"
       ],
-      "execution_count": 183,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
