--- a/Notebooks/Pandas_Basics.ipynb
+++ b/Notebooks/Pandas_Basics.ipynb
@@ -49,7 +49,7 @@
         }
       },
       "source": [
-        "# Por coluna (dicionário de listas)\n",
+        "# Por coluna (dicionário de listas - 'nome da coluna':[lista de valores])\n",
         "data = {'Name':['Tom','nick','krish'], 'Age':[20, 21, 19], 'Gender':['M','M','F']}\n",
         "df = pd.DataFrame(data)\n",
         "df"
@@ -132,7 +132,7 @@
         "outputId": "aad0e3e6-8bfb-4b8d-df64-44e42b9e2b17"
       },
       "source": [
-        "# Por linha (lista de dicionários)\n",
+        "# Por linha (lista de dicionários - um dicionário por registro(linha))\n",
         "data = [{'Name':'Tom','Age':20,'Gender':'M'}, {'Name':'nick','Age':21,'Gender':'M'}, {'Name':'krish','Age':19,'Gender':'F'}]\n",
         "df = pd.DataFrame(data)\n",
         "df"
@@ -223,6 +223,30 @@
       "source": [
         "arquivo = '../content/drive/My Drive/Temp/salarios.csv'\n",
         "df = pd.read_csv(arquivo)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6rtEHDEupu5P",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Exportando um DataFrame para um arquivo CSV**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JGnGeEhEpw_N",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "arquivo = '../content/drive/My Drive/Temp/salarios.csv'\n",
+        "df.to_csv(arquivo)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3362,17 +3386,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KJ0atD3Wthvy",
-        "colab_type": "text"
-      },
-      "source": [
-        "---\n",
-        "### **Exportando um DataFrame para um arquivo CSV**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "Qu2DysGztiCK",
@@ -3380,6 +3393,7 @@
         "colab": {}
       },
       "source": [
+        "# Salvando resultado das alterações\n",
         "df_2.to_csv('../content/drive/My Drive/Temp/salarios2.csv', index=False, encoding='utf-8')"
       ],
       "execution_count": 0,
