--- a/Notebooks/Pandas_Statistics.ipynb
+++ b/Notebooks/Pandas_Statistics.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Pandas_Statistics.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -31,10 +32,10 @@
       "metadata": {
         "id": "m3plfI-AxbD2",
         "colab_type": "code",
-        "outputId": "aa69720a-fb25-4cef-8266-4bff4dcafef5",
+        "outputId": "d5201751-9233-49a1-e65e-2c6bfd6af59f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 197
         }
       },
       "source": [
@@ -42,7 +43,7 @@
         "df = pd.read_csv(arquivo)\n",
         "df.head()"
       ],
-      "execution_count": 117,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +139,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 117
+          "execution_count": 4
         }
       ]
     },
@@ -158,16 +159,16 @@
       "metadata": {
         "id": "Ae6RlDnuUinj",
         "colab_type": "code",
-        "outputId": "aa569ef9-5c34-4dd6-935e-85bf861d6364",
+        "outputId": "d3f3c50e-f552-4712-a933-a4626bdda64d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 287
         }
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": 118,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -264,7 +265,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 118
+          "execution_count": 5
         }
       ]
     },
@@ -282,7 +283,7 @@
       "source": [
         "df.describe(percentiles=[.20,.40,.60,.80])"
       ],
-      "execution_count": 119,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +412,7 @@
       "source": [
         "df['Full Name'].describe()"
       ],
-      "execution_count": 120,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,16 +448,17 @@
       "metadata": {
         "id": "Nx1cr5J8UmvG",
         "colab_type": "code",
-        "outputId": "efbad1d0-fe8b-43e2-e754-2a0fcf6f4ed8",
+        "outputId": "7958fcc5-553d-450a-eb9f-efe8be3cc891",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 87
         }
       },
       "source": [
+        "# Por coluna\n",
         "df.mean()"
       ],
-      "execution_count": 121,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +473,49 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 121
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GBr8ihKMPvf2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 230
+        },
+        "outputId": "61707729-77fd-4d5c-a3a8-1f9c8ceb9c40"
+      },
+      "source": [
+        "# Por linha\n",
+        "df.mean(1)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        32207.496667\n",
+              "1        29243.603333\n",
+              "2        29243.603333\n",
+              "3        30692.423333\n",
+              "4        37916.983333\n",
+              "             ...     \n",
+              "32177    31322.346667\n",
+              "32178    30271.026667\n",
+              "32179    31322.346667\n",
+              "32180    39950.110000\n",
+              "32181             NaN\n",
+              "Length: 32182, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     },
@@ -489,7 +533,7 @@
       "source": [
         "df['Annual Salary'].quantile(.50) #percentile"
       ],
-      "execution_count": 122,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +563,7 @@
       "source": [
         "df[['Monthly Salary','Annual Salary']].median()"
       ],
-      "execution_count": 123,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +595,7 @@
       "source": [
         "df['Daily Salary'].cumsum() #soma cumulativa"
       ],
-      "execution_count": 124,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,17 +627,17 @@
       "metadata": {
         "id": "g5MfaOQbB39f",
         "colab_type": "code",
+        "outputId": "eeffc8bf-6491-48c7-da5a-8e30bccd5c2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "eeffc8bf-6491-48c7-da5a-8e30bccd5c2b"
+        }
       },
       "source": [
         "# Salário mensal médio de um oficial de polícia\n",
         "df[df['Position Title']=='POLICE OFFICER']['Monthly Salary'].mean()"
       ],
-      "execution_count": 125,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,7 +683,7 @@
         "\n",
         "df[['Monthly Salary','Annual Salary']].agg(['min','mean','max',cust])"
       ],
-      "execution_count": 126,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +776,7 @@
       "source": [
         "df['Department'].value_counts().head()"
       ],
-      "execution_count": 127,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -768,7 +812,7 @@
         "# Em % do total\n",
         "df['Department'].value_counts(normalize=True).head() "
       ],
-      "execution_count": 128,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +852,7 @@
         "df_conta = pd.DataFrame({'#':cont, '# cum':cont_cum, '%':cont_perc, '% cum':cont_perc_cum})\n",
         "df_conta"
       ],
-      "execution_count": 129,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1150,11 +1194,11 @@
       "metadata": {
         "id": "Roc8-4JPEjxn",
         "colab_type": "code",
+        "outputId": "15a303f1-95f4-4421-b0e9-25f7cbb29b8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "15a303f1-95f4-4421-b0e9-25f7cbb29b8a"
+        }
       },
       "source": [
         "# Ao invés de fazer isso:\n",
@@ -1162,7 +1206,7 @@
         "print(df[df['Position Title']=='CHIEF']['Monthly Salary'].mean())\n",
         "print(df[df['Position Title']=='WATER RATE TAKER']['Monthly Salary'].mean())"
       ],
-      "execution_count": 130,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1180,17 +1224,17 @@
       "metadata": {
         "id": "Zoq0xRDFFC29",
         "colab_type": "code",
+        "outputId": "67b6b827-03cf-4ddf-9a87-5bce18aaf280",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        },
-        "outputId": "67b6b827-03cf-4ddf-9a87-5bce18aaf280"
+        }
       },
       "source": [
         "# Podemos usar o .groupby\n",
         "df.groupby('Position Title')['Monthly Salary'].mean()"
       ],
-      "execution_count": 131,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1223,17 +1267,17 @@
       "metadata": {
         "id": "8SWsNYi0PJ_o",
         "colab_type": "code",
+        "outputId": "e65468af-197e-4161-d982-0a0a800f6e70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "e65468af-197e-4161-d982-0a0a800f6e70"
+        }
       },
       "source": [
         "# Se não passar nenhum coluna para a função, faz em todas aplicáveis\n",
         "df.groupby('Position Title').mean().head()"
       ],
-      "execution_count": 161,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1325,16 +1369,16 @@
       "metadata": {
         "id": "meeS2nprG9vJ",
         "colab_type": "code",
+        "outputId": "4ec25e29-7d9b-49eb-8ed9-b3fd598b46d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "4ec25e29-7d9b-49eb-8ed9-b3fd598b46d9"
+        }
       },
       "source": [
         "df.groupby('Position Title')['Monthly Salary'].agg(['min','max']).head()"
       ],
-      "execution_count": 162,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1419,16 +1463,16 @@
       "metadata": {
         "id": "vrelvRQeHgaX",
         "colab_type": "code",
+        "outputId": "064bfcd7-61ad-4353-98fe-b92f067285db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 266
-        },
-        "outputId": "064bfcd7-61ad-4353-98fe-b92f067285db"
+        }
       },
       "source": [
         "df.groupby(['Department','Position Title'])[['Monthly Salary','Daily Salary']].agg(['min','max']).head()"
       ],
-      "execution_count": 186,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1543,11 +1587,11 @@
       "metadata": {
         "id": "Rt-Gq_4QHr_t",
         "colab_type": "code",
+        "outputId": "071dde8a-74ad-4f02-8857-02eac0946c38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "071dde8a-74ad-4f02-8857-02eac0946c38"
+        }
       },
       "source": [
         "# Top 5 departamentos mais caros (mensal %)\n",
@@ -1556,7 +1600,7 @@
         "month_norm = round(month_dep/month_tot * 100, 2)\n",
         "pd.DataFrame(month_norm.sort_values(ascending=False).head())"
       ],
-      "execution_count": 152,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,18 +1689,18 @@
       "metadata": {
         "id": "4FCW_mNzR6DL",
         "colab_type": "code",
+        "outputId": "2d25170a-d5fd-45b4-a920-0fb779ac2e9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 266
-        },
-        "outputId": "2d25170a-d5fd-45b4-a920-0fb779ac2e9f"
+        }
       },
       "source": [
         "# df.groupby(['Department','Position Title'])['Monthly Salary','Daily Salary'].agg(['min','max'])\n",
         "df.pivot_table(index=['Department','Position Title'],values=['Monthly Salary','Daily Salary'],aggfunc=['min','max']).head()\n",
         "# Se não passar \"aggfunc\" por padrão calcula \"mean\""
       ],
-      "execution_count": 219,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1771,17 +1815,17 @@
       "metadata": {
         "id": "W_sPQ-EzSgbj",
         "colab_type": "code",
+        "outputId": "28c717b0-d2d4-4b80-c0f6-5d51cf602947",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        },
-        "outputId": "28c717b0-d2d4-4b80-c0f6-5d51cf602947"
+        }
       },
       "source": [
         "# Passando \"Department\" para as colunas\n",
         "df.pivot_table(index='Position Title', values='Monthly Salary', columns='Department', aggfunc='max').head(2)"
       ],
-      "execution_count": 220,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1982,17 +2026,17 @@
       "metadata": {
         "id": "mF2ogHCPU2wL",
         "colab_type": "code",
+        "outputId": "100b39f2-bdbe-4323-9f1c-1bc0dc28f52e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        },
-        "outputId": "100b39f2-bdbe-4323-9f1c-1bc0dc28f52e"
+        }
       },
       "source": [
         "# Para preencher os valores de cruzamentos que não existem, usa-se o parâmetro \"fill_value\"\n",
         "df.pivot_table(index='Position Title', values='Monthly Salary', columns='Department', aggfunc='max', fill_value=0).head(2)"
       ],
-      "execution_count": 221,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
